[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dsas"
version = "0.0.0"

[tool.setuptools]
package-dir = {"" = "src", "tests" = "tests", "utils" = "utils"}
packages = ["algorithms", "data_structures", "tests", "tests.algorithms", "tests.data_structures", "utils"]
